--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "require": {
     "laravel/framework": "5.0.*",
     "illuminate/html": "5.*",
-    "laravel/socialite": "~2.0"
+    "laravel/socialite": "~2.0",
+    "guzzlehttp/guzzle": "5.2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
