--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "laravel-elixir": "*",
-    "laravel-elixir-imagemin": "^0.1.6"
+    "laravel-elixir-imagemin": "^0.1.6",
+    "laravel-elixir-angular": "~0.1.1"
   }
 }
