--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "laravel/framework": "5.0.*",
     "illuminate/html": "5.*",
     "laravel/socialite": "~2.0",
-    "guzzlehttp/guzzle": "5.2.0"
+    "guzzlehttp/guzzle": "5.2.0",
+    "jenssegers/date": "~3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
