--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "gulp": "^3.8.8",
     "laravel-elixir": "*",
     "laravel-elixir-imagemin": "^0.1.6",
-    "laravel-elixir-angular": "~0.1.1"
+    "laravel-elixir-angular": "~0.1.1",
+    "q": "~1.4.0"
   }
 }
