--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "TimeToRun",
   "dependencies": {
     "jquery": "~2.1.4",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angular": "~1.3.15"
   }
 }
