--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
-    "angular-bootstrap": "~0.13.0",
-    "components-font-awesome": "~4.3.0"
+    "angular-bootstrap": "~0.13.0"
   }
 }
