--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "illuminate/html": "5.*",
     "laravel/socialite": "~2.0",
     "guzzlehttp/guzzle": "5.2.0",
-    "jenssegers/date": "~3.0"
+    "jenssegers/date": "~3.0",
+    "doctrine/dbal": "~2.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
