--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,11 @@
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.7.14"
+  },
+  "resolutions": {
+    "jquery": "~2.1.4",
+    "bootstrap": "~3.3.4"
   }
 }
