--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
     "angular-bootstrap": "~0.13.0",
-    "eonasdan-bootstrap-datetimepicker": "~4.7.14"
+    "eonasdan-bootstrap-datetimepicker": "~4.7.14",
+    "angular-google-places-autocomplete": "~0.2.6"
   },
   "resolutions": {
     "jquery": "~2.1.4",
