--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "laravel/socialite": "~2.0",
     "guzzlehttp/guzzle": "5.2.0",
     "jenssegers/date": "~3.0",
-    "doctrine/dbal": "~2.3"
+    "doctrine/dbal": "~2.3",
+    "barryvdh/laravel-cors": "0.7.x"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
